force-app/main/default/objects/FS_Artifact_Ruleset__c/FS_Artifact_Ruleset__c.object-meta.xml
<CustomObject>
    <label>Artifact Ruleset</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rulesets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>