force-app/main/default/objects/FS_Artifact_Ruleset__c/fields/FS_CheckPromote__c.field-meta.xml
<CustomField>
    <fullName>FS_CheckPromote__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CheckPromote</label>
    <type>Checkbox</type>
</CustomField>