force-app/main/default/objects/FS_Artifact_Ruleset__c/fields/FS_CheckSimulate__c.field-meta.xml
<CustomField>
    <fullName>FS_CheckSimulate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CheckSimulate</label>
    <type>Checkbox</type>
</CustomField>