force-app/main/default/objects/FS_Artifact_Ruleset__c/fields/Last_Promote_Status__c.field-meta.xml
<CustomField>
    <fullName>Last_Promote_Status__c</fullName>
    <label>Last Promote Status</label>
    <length>44</length>
    <type>Text</type>
</CustomField>