force-app/main/default/objects/FS_Artifact_Ruleset__c/fields/Last_Promote_Updated__c.field-meta.xml
<CustomField>
    <fullName>Last_Promote_Updated__c</fullName>
    <label>Last Promote Updated</label>
    <type>DateTime</type>
</CustomField>