force-app/main/default/objects/FS_Artifact_Ruleset__c/fields/Last_Simulation_Status__c.field-meta.xml
<CustomField>
    <fullName>Last_Simulation_Status__c</fullName>
    <label>Last Simulation Status</label>
    <length>44</length>
    <type>Text</type>
</CustomField>