force-app/main/default/objects/FS_Artifact_Ruleset__c/fields/Last_Simulation_Updated__c.field-meta.xml
<CustomField>
    <fullName>Last_Simulation_Updated__c</fullName>
    <label>Last Simulation Updated</label>
    <type>DateTime</type>
</CustomField>