force-app/main/default/objects/FS_Artifact_Ruleset__c/validationRules/FOT_Check_RuleSetName_For_Spaces.validationRule-meta.xml
<ValidationRule>
    <fullName>FOT_Check_RuleSetName_For_Spaces</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(Name ,&quot;([a-zA-Z0-9-_])*&quot;))</errorConditionFormula>
    <errorMessage>Please enter Ruleset name without spaces and special characters (like &amp;!#%etc..).</errorMessage>
</ValidationRule>