force-app/main/default/objects/FS_Artifact_Ruleset__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Last_Promote_Status__c</columns>
    <columns>Last_Promote_Updated__c</columns>
    <columns>Last_Simulation_Status__c</columns>
    <columns>Last_Simulation_Updated__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>