force-app/main/default/objects/FS_Artifact_Ruleset__c/listViews/ruleset_view_admin.listView-meta.xml
<ListView>
    <fullName>ruleset_view_admin</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>ruleset-view-admin</label>
</ListView>